--- a/package.json
+++ b/package.json
@@ -17,6 +17,15 @@
   },
   "homepage": "https://github.com/samizdapp/herakles-lib#readme",
   "devDependencies": {
+    "@peculiar/webcrypto": "^1.4.0",
     "rollup": "^2.74.1"
+  },
+  "dependencies": {
+    "2key-ratchet": "^1.0.18",
+    "json-diff": "^0.7.4",
+    "keytar": "^7.9.0",
+    "lob-enc": "^0.0.17",
+    "object-traversal": "^1.0.1",
+    "uuid": "^8.3.2"
   }
 }
