--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "json-diff": "^0.7.4",
     "keytar": "^7.9.0",
     "lob-enc": "^0.0.17",
+    "node-fetch": "^2.6.7",
     "object-traversal": "^1.0.1",
     "uuid": "^8.3.2"
   }
