--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "description": "shared protocol library for herakles backend <> frontend comms",
   "main": "index.js",
+  "type": "module",
   "engine": {
-    "node": "16"
+    "node": ">=14.16"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -29,10 +30,25 @@
     "rollup-plugin-node-polyfills": "^0.2.1"
   },
   "dependencies": {
+    "@chainsafe/libp2p-noise": "^8.0.1",
+    "@libp2p/mplex": "^5.2.3",
+    "@libp2p/peer-id-factory": "^1.0.18",
+    "@libp2p/tcp": "^3.1.1",
+    "@libp2p/websockets": "^3.0.4",
     "cross-fetch": "^3.1.5",
+    "datastore-level": "^9.0.1",
+    "it-pipe": "^2.0.4",
     "json-diff": "^0.7.4",
+    "libp2p": "^0.39.2",
+    "libp2p-bootstrap": "^0.14.0",
+    "libp2p-mplex": "^0.10.7",
+    "libp2p-noise": "^4.0.0",
+    "libp2p-spdy": "^0.13.3",
+    "libp2p-websockets": "^0.16.2",
     "lob-enc": "^0.0.17",
+    "local-ip": "^2.0.0",
     "localforage": "^1.10.0",
+    "nat-api": "^0.3.1",
     "node-fetch": "^2.6.7",
     "node-localstorage": "^2.2.1",
     "object-traversal": "^1.0.1",
@@ -40,6 +56,7 @@
     "pocket-sockets": "^1.1.1",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
+    "uint8arrays": "^3.1.0",
     "uuid": "^8.3.2"
   }
 }
