--- a/package.json
+++ b/package.json
@@ -30,16 +30,19 @@
     "rollup-plugin-node-polyfills": "^0.2.1"
   },
   "dependencies": {
-    "@chainsafe/libp2p-noise": "^8.0.1",
+    "@chainsafe/libp2p-noise": "^8.0.2",
+    "@libp2p/bootstrap": "^3.0.0",
+    "@libp2p/kad-dht": "^3.1.0",
     "@libp2p/mplex": "^5.2.3",
     "@libp2p/peer-id-factory": "^1.0.18",
     "@libp2p/tcp": "^3.1.1",
     "@libp2p/websockets": "^3.0.4",
+    "chokidar": "^3.5.3",
     "cross-fetch": "^3.1.5",
     "datastore-level": "^9.0.1",
     "it-pipe": "^2.0.4",
     "json-diff": "^0.7.4",
-    "libp2p": "^0.39.2",
+    "libp2p": "^0.39.4",
     "libp2p-bootstrap": "^0.14.0",
     "libp2p-mplex": "^0.10.7",
     "libp2p-noise": "^4.0.0",
