--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "chokidar": "^3.5.3",
     "cross-fetch": "^3.1.5",
     "datastore-level": "^9.0.1",
+    "into-stream": "^7.0.0",
     "it-pipe": "^2.0.4",
     "json-diff": "^0.7.4",
     "libp2p": "^0.39.4",
